@@ -18,6 +18,7 @@ use TrkDetDescrUtils       TrkDetDescrUtils-*         Tracking/TrkDetDescr
 use TrkDetDescrTools       TrkDetDescrTools-*         Tracking/TrkDetDescr
 use TrkGeometry            TrkGeometry-*              Tracking/TrkDetDescr
 use TrkSurfaces            TrkSurfaces-*              Tracking/TrkDetDescr 
+use TrkGeometrySurfaces    TrkGeometrySurfaces-*      Tracking/TrkDetDescr 
 use TrkVolumes             TrkVolumes-*               Tracking/TrkDetDescr
 use TrkDetDescrGeoModelCnv TrkDetDescrGeoModelCnv-*   Tracking/TrkDetDescr
 use TrkMagFieldUtils       TrkMagFieldUtils-*         Tracking/TrkMagneticField      
